BUG FIX: scrollbar clipping with border radius

--- a/src/styles/aqi.css
+++ b/src/styles/aqi.css
@@ -17,15 +17,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.aqi-h2 {
-    display: block;
-    font-size: 3rem;
-    font-weight: 900;
-    letter-spacing: 5px;
-    margin: 1rem auto;
-    padding: 1rem;
+    overflow: hidden;
 }
 
 #aqi-flex {
@@ -70,5 +62,3 @@
 .aqi-box:nth-of-type(2) {
     grid-row: 2 / 4;
 }
-
-
